新增点东西

--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title></title>
-  <link rel="stylesheet" href="styles/app.css">
+    <meta charset="UTF-8">
+    <title></title>
+    <link rel="stylesheet" href="styles/app.css">
 </head>
+
 <body>
-  <!-- 这是注释 -->
-  <h1>taoyige is a boy</h1>
-  <span>新增点东西</span>
-
-
-  <span>第三次修改的东西</span>
-  
-  直接在GitHub上面修改的内容
-  
-
-  <script src="scripts/all.js"></script>
-  <script>
-    
-
-  </script>
+    <!-- 这是注释 -->
+    <h1>taoyige is a boy</h1>
+    <span>新增点东西</span>
+    <span>第三次修改的东西</span> 直接在GitHub上面修改的内容
+    <script src="scripts/all.js"></script>
+    <script>
+    </script>
 </body>
+
 </html>
